# iwac-mcp-server

./: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  IMPROVEMENTS.md  IWAC MCP server project.md  LICENSE  QUICKSTART_UV.md  README.md  STATUS.md  TODO.md  VSCODE_SETUP.md  pyproject.toml  test_mcp_server.py  test_search_fix.py
.agents/skills/iwac-mcp/: SKILL.md
.agents/skills/iwac-mcp/references/: biases-and-limitations.md  capabilities-overview.md  research-domains.md  tools-by-phase.md
.claude/skills/iwac-mcp/: SKILL.md
.claude/skills/iwac-mcp/references/: biases-and-limitations.md  capabilities-overview.md  research-domains.md  tools-by-phase.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: connecting.md
mcpb/: .dockerignore  .mcpbignore  Dockerfile  README.md  biome.json  manifest.json  package-lock.json  package.json  smoke-test.mjs  tsconfig.json
mcpb/scripts/: bundle.mjs  duckdb-bindings.mjs  install-duckdb-bindings.mjs  make-fixtures.mjs  make-server-json.mjs  pack-platforms.mjs
mcpb/src/: config.ts  db.ts  embeddings.ts  hf.ts  http.ts  index.ts  tools.ts
mcpb/src/tools/: _semantic.ts  _shared.ts  articles.ts  audiovisual.ts  documents.ts  indexTools.ts  publications.ts  references.ts  register.ts  search.ts  sentiment.ts  stats.ts
mcpb/test/: _harness.mjs  fixture-server.test.mjs  http-server.test.mjs  unit.test.ts
scripts/: discover_newspaper_itemsets.py
src/iwac_mcp/: __init__.py  config.py  hf_client.py  omeka_client.py  server.py
tests/: test_tools.py
